--- a/main.css
+++ b/main.css
@@ -14,3 +14,9 @@
     grid-template-columns: repeat(auto-fill, minmax(310px, 1fr));
     gap: 4px;
 }
+.images{
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    justify-content:right ;
+}
